# ic-solidity-bindgen

./: Cargo.toml  LICENSE  README.md
examples/: Cargo.toml  README.md  dfx.json
examples/src/examples/: Cargo.toml  examples.did
examples/src/examples/src/: lib.rs
ic-solidity-bindgen/: Cargo.toml  README.md
ic-solidity-bindgen-macros/: Cargo.toml
ic-solidity-bindgen-macros/src/: abi_gen.rs  lib.rs
ic-solidity-bindgen/src/: context.rs  internal.rs  lib.rs  providers.rs  rpc_methods.rs  transform.rs  types.rs  web3_provider.rs
