[package]
name = "ic-solidity-bindgen-macros"
version = "0.1.9"
license = "MIT"
description = "A proc macro crate internal to ic-solidity-bindgen"
keywords = ["dfinity", "icp", "web3", "ethereum", "rpc"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.18"
quote = "1.0.3"
proc-macro2 = "1.0.10"
Inflector = "0.11.4"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
ic-web3-rs = { git = "https://github.com/horizonx-tech/ic-web3-rs.git", branch = "topic/ic-cdk-0.11"}
