[package]
name = "ic-solidity-bindgen-macros"
version = "0.1.11"
license = "MIT"
description = "A proc macro crate internal to ic-solidity-bindgen"
keywords = ["dfinity", "icp", "web3", "ethereum", "rpc"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ic-web3-rs.workspace = true
serde_json.workspace = true

Inflector = "0.11.4"
proc-macro2 = "1.0.10"
quote = "1.0.3"
serde = { version = "1.0.106", features = ["derive"] }
syn = "1.0.18"
