[package]
name = "ic-solidity-bindgen"
version = "0.1.2"
license = "MIT"
description = "Generates bindings for solidity contracts. Uses web3 under the hood. This is a fork of graphprotocol/solidity-bindgen"
keywords = ["dfinity", "icp", "web3", "ethereum", "rpc"]
edition = "2021"

[badges]
maintenance = { status = "experimental" }

[dependencies]
ic-solidity-bindgen-macros = { version="0.1.2", path = "../ic-solidity-bindgen-macros" }
async-trait = "0.1.50"
ic-cdk = "0.7.4"
hex = "0.4.3"
ic-web3-rs = "0.1.0"
serde_json = "1.0.96"
derive_builder = "0.12.0"
