[package]
name = "ic-solidity-bindgen"
version = "0.1.12"
license = "MIT"
description = "Generates bindings for solidity contracts. Uses web3 under the hood. This is a fork of graphprotocol/solidity-bindgen"
keywords = ["dfinity", "icp", "web3", "ethereum", "rpc"]
edition = "2021"

[badges]
maintenance = { status = "experimental" }

[dependencies]
ic-web3-rs.workspace = true
serde_json.workspace = true

async-trait = "0.1.50"
derive_builder = "0.12.0"
hex = "0.4.3"
ic-cdk = "0.13.2"
ic-solidity-bindgen-macros = { path = "../ic-solidity-bindgen-macros" }
